# nicegui_calculator_example

./: main.py  pyproject.toml
